--- a/abc_comprehensivecbaaer.tex
+++ b/abc_comprehensivecbaaer.tex
@@ -1,5 +1,5 @@
 %Input preamble
-\input{preambleappendix}
+\input{preamble}
 \input{output/mainstatistics}
 
 \usepackage[stable]{footmisc}
@@ -22,29 +22,15 @@
 \begin{document}
 
 \begin{titlepage}
-\newgeometry{top=.8in, bottom=.8in, left=.8in, right=.8in}
+\newgeometry{top=1.5in, bottom=1.5in, left=1.5in, right=1.5in}
 
-\title{\Large \textbf{The Life-cycle Benefits \\ of an Influential Early Childhood Program}\thanks{This research was supported in part by: the Buffett Early Childhood Fund; the Pritzker Children's Initiative; the Robert Wood Johnson Foundation's Policies for Action program; the Leonard D. Schaeffer Center for Health Policy and Economics; NIH grants NICHD R37HD065072, NICHD R01HD054702, and NIA R24AG048081; Successful Pathways from School to Work, an initiative of the University of Chicago's Committee on Education and funded by the Hymen Milgrom Supporting Organization; the Human Capital and Economic Opportunity Global Working Group, an initiative of the Center for the Economics of Human Development and funded by the Institute for New Economic Thinking; and the American Bar Foundation. The views expressed in this paper are solely those of the authors and do not necessarily represent those of the funders or the official views of the National Institutes of Health. The authors wish to thank Frances Campbell, Craig and Sharon Ramey, Margaret Burchinal, Carrie Bynum, and the staff of the Frank Porter Graham Child Development Institute at the University of North Carolina Chapel Hill for the use of data and source materials from the Carolina Abecedarian Project and the Carolina Approach to Responsive Education. Years of partnership and collaboration have made this work possible. Collaboration with Andr\'{e}s Hojman, Yu Kyung Koh, Sylvi Kuperman, Stefano Mosso, Rodrigo Pinto, Joshua Shea, Jake Torcasso, and Anna Ziff on related work has strengthened the analysis in this paper. Collaboration with Bryan Tysinger of the Leonard D. Schaeffer Center for Health Policy and Economics at the University of Southern California on adapting the Future America Model is gratefully acknowledged. For helpful comments on various versions of the paper, we thank St\'{e}phane Bonhomme, Fl\'{a}vio Cunha, Steven Durlauf, David Figlio, Dana Goldman, Ganesh Karapakula, Sidharth Moktan, Tanya Rajan, Azeem Shaikh, Jeffrey Smith, Matthew Tauzer, and Ed Vytlacil. We also benefited from helpful comments received at seminars at the Russell Sage Foundation in September, 2016 and at the Leonard D. Schaeffer Center for Health Policy and Economics in December, 2016. For information on the implementation of the Carolina Abecedarian Project and the Carolina Approach to Responsive Education and assistance in data acquisition, we thank Peg Burchinal, Carrie Bynum, Frances Campbell, and Elizabeth Gunn. For information on childcare in North Carolina, we thank Richard Clifford and Sue Russell. The set of codes to replicate the computations in this paper are posted in a repository. Interested parties can request to download all the files. The address of the repository is \url{https://github.com/jorgelgarcia/abccare-cba}. To replicate the results in this paper, contact any of the authors, who will put you in contact with the appropriate individuals to obtain access to restricted data. The Web Appendix for this paper is posted on \url{http://cehd.uchicago.edu/ABC_CARE}.}}
+\title{\Large \textbf{The Life-cycle Benefits \\ of an Influential Early Childhood Program}\thanks{Garc\'{i}a: The University of Chicago, Department of Economics. 5740 S Woodlawn Av. Chicago, IL. email: jorgelgarcia@uchicago.edu. Heckman: American Bar Foundation and The University of Chicago, Department of Economics. 1126 East 59th Street Chicago, IL. email: jjh@uchicago.edu. Leaf: Leonard D. Schaeffer Center for Health Policy and Economics, University of Southern California. 635 Downey Way, Los Angeles, CA 90089. email: dleaf@healthpolicy.usc.edu. Prados: Dornsife Center for Economic and Social Research, University of Southern California. 635 Downey Way, Los Angeles, CA 90089. email: prados@usc.edu. This research was supported in part by: the Buffett Early Childhood Fund; the Pritzker Children's Initiative; the Robert Wood Johnson Foundation's Policies for Action program; the Leonard D. Schaeffer Center for Health Policy and Economics; NIH grants NICHD R37HD065072, NICHD R01HD054702, and NIA R24AG048081; Successful Pathways from School to Work, an initiative of the University of Chicago's Committee on Education and funded by the Hymen Milgrom Supporting Organization; the Human Capital and Economic Opportunity Global Working Group, an initiative of the Center for the Economics of Human Development and funded by the Institute for New Economic Thinking; and the American Bar Foundation. The views expressed in this paper are solely those of the authors and do not necessarily represent those of the funders or the official views of the National Institutes of Health. The authors wish to thank Frances Campbell, Craig and Sharon Ramey, Margaret Burchinal, Carrie Bynum, and the staff of the Frank Porter Graham Child Development Institute at the University of North Carolina Chapel Hill for the use of data and source materials from the Carolina Abecedarian Project and the Carolina Approach to Responsive Education. Years of partnership and collaboration have made this work possible. Collaboration with Andr\'{e}s Hojman, Yu Kyung Koh, Sylvi Kuperman, Stefano Mosso, Rodrigo Pinto, Joshua Shea, Jake Torcasso, and Anna Ziff on related work has strengthened the analysis in this paper. Collaboration with Bryan Tysinger of the Leonard D. Schaeffer Center for Health Policy and Economics at the University of Southern California on adapting the Future America Model is gratefully acknowledged. For helpful comments on various versions of the paper, we thank St\'{e}phane Bonhomme, Fl\'{a}vio Cunha, Steven Durlauf, David Figlio, Dana Goldman, Ganesh Karapakula, Sidharth Moktan, Tanya Rajan, Azeem Shaikh, Jeffrey Smith, Matthew Tauzer, and Ed Vytlacil. We also benefited from helpful comments received at seminars at the Russell Sage Foundation in September, 2016 and at the Leonard D. Schaeffer Center for Health Policy and Economics in December, 2016. For information on the implementation of the Carolina Abecedarian Project and the Carolina Approach to Responsive Education and assistance in data acquisition, we thank Peg Burchinal, Carrie Bynum, Frances Campbell, and Elizabeth Gunn. For information on childcare in North Carolina, we thank Richard Clifford and Sue Russell. The set of codes to replicate the computations in this paper are posted in a repository. Interested parties can request to download all the files. The address of the repository is \url{https://github.com/jorgelgarcia/abccare-cba}. To replicate the results in this paper, contact any of the authors, who will put you in contact with the appropriate individuals to obtain access to restricted data. The Web Appendix for this paper is posted on \url{http://cehd.uchicago.edu/ABC_CARE}.}}
 
 \author{
-Jorge Luis Garc\'{i}a\\
-Department of Economics\\
-The University of Chicago \and
-James J. Heckman \\
-American Bar Foundation \\
-Department of Economics\\
-The University of Chicago \and
-Duncan Ermini Leaf \\
-Leonard D. Schaeffer Center \\  for Health Policy and Economics\\
-University of Southern California \and
-Mar\'{i}a Jos\'{e} Prados \\
-Dornsife Center for \\ Economic and Social Research\\
-University of Southern California}
-\date{First Draft: January 5, 2016\\ This Draft: \today}
+Jorge Luis Garc\'{i}a, James J. Heckman, Duncan Ermini Leaf, \\ and Mar\'{i}a Jos\'{e} Prados}
+\date{\today}
 
 \maketitle
-\restoregeometry
-\end{titlepage}
 
 \singlespacing
 \begin{abstract}
@@ -52,40 +38,12 @@ University of Southern California}
 \end{abstract}
 
 \noindent \textbf{Keywords}: Childcare, early childhood education, gender differences in responses to programs, health, long-term predictions, quality of life, randomized trials, substitution bias \\
-\noindent \textbf{JEL codes}: J13, I28, C93\\
+\noindent \textbf{JEL codes}: J13, I28, C93
+\end{titlepage}
 
-\noindent \textbf{[JLG: I put in a 100 words version of the abstract for you to consider; it's a requisite of AER. I have resized a couple of the tables, so we have them ready for when we change format. Otherwise, this is NOT the paper in AER format. It's the paper in the format we have been working with.]}
-
-\bigskip
-\begin{tabular}{ll}
-Jorge Luis Garc\'{i}a                                       & James J. Heckman \\
-Department of Economics                                & Department of Economics \\
-University of Chicago                                       & University of Chicago \\
-1126 East 59th Street                                     & 1126 East 59th Street \\
-Chicago, IL 60637                                           & Chicago, IL 60637 \\
-Phone: 773-677-7938                                     & Phone: 773-702-0634  \\
-Email: jorgelgarcia@uchicago.edu                       & Email: jjh@uchicago.edu \\
-                                                                       & \\
-Duncan Ermini Leaf                                           & Mar\'{i}a Jos\'{e} Prados \\
-Leonard D. Schaeffer Center for            & Dornsife Center for  \\
-Health Policy \& Economics                                          & Economic and Social Research \\
-University of Southern California                        & University of Southern California \\
-635 Downey Way                                             & 635 Downey Way        \\
-Los Angeles, CA 90089                                    & Los Angeles, CA 90089 \\
-Phone: 213-821-6474                                     & Phone: 213-821-7969 \\
-Email: dleaf@healthpolicy.usc.edu                     & Email: prados@usc.edu \\
-
-\end{tabular}
-
-\clearpage
-
-\restoregeometry
 \doublespacing
-
 \setcounter{page}{0}
 \pagenumbering{arabic}
-
-\section{Introduction}
 
 \noindent This paper estimates the large array of life-cycle benefits of an influential early childhood program targeted to disadvantaged children. The program has substantial impacts on the lives of its participants. Monetizing benefits and costs across multiple domains, we estimate a rate of return of 13.7\% per annum and a benefit/cost ratio of 7.3. There are substantial differences across genders favoring males.
 
@@ -109,7 +67,7 @@ We find pronounced gender differences in treatment effects comparing high qualit
 
 We contribute to the literature on the effectiveness of early childhood programs by considering their long-term benefits on health. We estimate the savings from life-cycle medical costs and from improvements in the quality of life.\footnote{\cite{Campbell_Conti_etal_2014_EarlyChildhoodInvestments} show the substantial adult (mid-30s) health benefits of ABC but do not present a cost/benefit analysis of their results.} There are benefits for participants in terms of reduced crime, gains in life-cycle labor income, reduced special education costs and enhanced educational attainment. The program subsidizes the childcare of the mothers of participants and facilitates their employment and earnings.
 
-Figure~\ref{figure:main} summarizes the main findings of this paper. It displays the discounted (using a 3\% discount rate) life-cycle benefits of the program and costs (2014 USD), overall and disaggregated by category.\footnote{The baseline discount rate of 3\% is an arbitrary decision. In Table~\ref{table:bcsens} and Table~\ref{table:cba}, we report benefit-cost ratios using other discount rates. Using discount rates of 0\%, 3\%, and 7\%, the estimates for the benefit-cost ratios are 17.40 (s.e. 5.90), 7.33 (s.e. 1.84), and 2.91 (s.e. 0.59), respectively. We report estimates for discount rates between 0\% and 15\% in Appendix~\ref{appendix:sensitivity}.} We report separate estimates by gender, and for the pooled sample of males and females. Costs are substantial, as has frequently been noted by critics.\footnote{See, e.g., \citet{Whitehurst_2014_Senate_Testimony} and \citet{Fox_News_2014_Head_Start_Effects}.} But so are the benefits, which far outweigh the costs.
+Figure~\ref{figure:main} summarizes the main findings of this paper. It displays the discounted (using a 3\% discount rate) life-cycle benefits of the program and costs (2014 USD), overall and disaggregated by category.\footnote{The baseline discount rate of 3\% is an arbitrary decision. In Table~\ref{table:bcsens} and Table~\ref{table:cba}, we report benefit-cost ratios using other discount rates. Using discount rates of 0\%, 3\%, and 7\%, the estimates for the benefit-cost ratios are 16.49 (s.e. 6.97), 6.29 (s.e. 2.11), and 2.67 (s.e. 0.76), respectively. We report estimates for discount rates between 0\% and 15\% in Appendix~\ref{appendix:sensitivity}.} We report separate estimates by gender, and for the pooled sample of males and females. Costs are substantial, as has frequently been noted by critics.\footnote{See, e.g., \citet{Whitehurst_2014_Senate_Testimony} and \citet{Fox_News_2014_Head_Start_Effects}.} But so are the benefits, which far outweigh the costs.
 
 \begin{sidewaysfigure}[!htbp]
 \caption{Net Present Value of Main Components of the Cost/Benefit Analysis Over the Life Cycle per Program Participant, Treatment vs. Next Best}\label{figure:main}
@@ -636,10 +594,6 @@ Our microsimulation model starts with health predictions at age 30, along with t
 \end{threeparttable}
 \end{sidewaystable}
 
-At each age, once we obtain the transition probability for each health outcome, we make a Monte-Carlo draw for each subject. Thus, each simulation depends on each individual's health history and on their particular characteristics. For every simulated trajectory of health outcomes, we predict the lifetime medical expenditure using the models estimated from the MEPS and the MCBS. We then obtain an estimate of the expected lifetime medical expenditure by taking the mean of each individual's simulated lifetime medical expenditure.
-
-The models estimated using MCBS represent medical costs in the years 2007-2010. The MEPS estimation captures costs during 2008-2010. To account for real medical cost growth after 2010, we adjust each model's prediction using the method described in Appendix~\ref{appendix:health}.
-
 \begin{figure}[!htbp]
 \caption{Quality Adjusted Life Years: Predictions and Comparison to PSID}\label{fig:qalys}
 \centering
@@ -648,6 +602,10 @@ The models estimated using MCBS represent medical costs in the years 2007-2010. 
 \footnotesize
 Note:  This figure displays the life-cycle net-present value of predicted quality-adjusted life years (QALYs) for ABC/CARE males and females, respectively, by treatment status. The predictions are based on combining data from the Panel Study of Income Dynamics (PSID), the Health Retirement Study, and the Medical Expenditure Panel Survey (MEPS). For each gender, we display a comparison to disadvantaged males and females in the Panel Study of Income Dynamics (PSID), where disadvantaged is defined as being Black and having 12 years of education or less. QALYs are the quality-adjusted life years gain due to better health conditions. Standard errors are based on the empirical bootstrap distribution.}
 \end{figure}
+
+At each age, once we obtain the transition probability for each health outcome, we make a Monte-Carlo draw for each subject. Thus, each simulation depends on each individual's health history and on their particular characteristics. For every simulated trajectory of health outcomes, we predict the lifetime medical expenditure using the models estimated from the MEPS and the MCBS. We then obtain an estimate of the expected lifetime medical expenditure by taking the mean of each individual's simulated lifetime medical expenditure.
+
+The models estimated using MCBS represent medical costs in the years 2007-2010. The MEPS estimation captures costs during 2008-2010. To account for real medical cost growth after 2010, we adjust each model's prediction using the method described in Appendix~\ref{appendix:health}.
 
 The same procedure is applied to calculate quality-adjusted life years (QALYs).\footnote{A quality-adjusted life year (QALY) reweights a year of life according to its quality given the burden of disease. Suppose we assign a value of $\$150,000$ (2014 USD) to each year of life. A QALY of $\$150,000$ denotes a year of life in the absence of disease (perfect health). The value of QALY for an individual in a given year is smaller than $\$150,000$ when there is positive burden of disease, as worse health conditions imply lower QALYs. When an individual dies, her QALY equals zero. There are extreme combinations of disease and disability that may generate negative QALYs, although this is unusual. Because we quantify labor income in addition to other components, this value corresponds solely to monetizing the value of life net of what individuals produce in terms of economic output. The benefit-cost ratio and internal rate of return remain significant after removing this component entirely (see Table~\ref{table:cba}).} We compute a QALY model based on a widely-used health-related Quality-of-Life (HRQoL) measure (EQ-5D), available in MEPS.\footnote{For a definition and explanation of this instrument, see \citet{Dolan_1997_Modeling_MC,Shaw_etal_2005_EQ5D_MC}.} We then estimate this model using the PSID.
 
@@ -793,5 +751,7 @@ Benefits differ substantially by gender. Females have more beneficial treatment 
 \singlespace
 \bibliographystyle{chicago}
 \bibliography{heckman}
+
+%\includepdf[pages=-]{abc_comprehensivecba_appendix-pub-aer.pdf}
 
 \end{document} 
