--- a/output/allirr_sens.tex
+++ b/output/allirr_sens.tex
@@ -1,30 +1,30 @@
 \begin{tabular}{>{\bfseries}lcc|cc|cc} \toprule
-	&	\multicolumn{2}{c}{\textbf{\textit{Pooled}}}	&	\multicolumn{2}{c}{\textbf{\textit{Males}}}	&	\multicolumn{2}{c}{\textbf{\textit{Females}}}	\\ 
-Baseline	&	\multicolumn{2}{c}{\textbf{0.13} (s.e. 0.05)}	&	\multicolumn{2}{c}{\textbf{0.13} (s.e. 0.06)}	&	\multicolumn{2}{c}{0.10 (s.e. 0.08)}	\\ \\
+	&	\multicolumn{2}{c}{\textbf{\textit{Pooled}}}	&	\multicolumn{2}{c}{\textbf{\textit{Males}}}	&	\multicolumn{2}{c}{\textbf{\textit{Females}}}	\\ \toprule
+Baseline	&	\multicolumn{2}{c}{\textbf{13.7\%} (s.e. 3.3\%)}	&	\multicolumn{2}{c}{\textbf{14.7\%} (s.e. 4.2\%)}	&	\multicolumn{2}{c}{\textbf{10.1\%} (s.e. 6.0\%)}	\\
 \multicolumn{7}{l}{\textit{Baseline: IPW and Controls, Life-span up to predicted death, Treatment vs. Next Best, 50\% Marginal tax 50\% (deadweight loss), Discount rate 3\%, Parental}} \\	
 \multicolumn{7}{l}{\textit{income 0 to 21 (child's age), Labor Income predicted from 21 to 65, All crimes (full costs), Value of life 150,000.}} \\ \\ \midrule	
 Specification	&	\textit{No IPW}	&	\textit{and No Controls}	&	\textit{No IPW}	&	\textit{and No Controls}	&	\textit{No IPW}	&	\textit{and No Controls}	\\
-	&	\textbf{0.14}	&	\textbf{0.13}	&	\textbf{0.15}	&	\textbf{0.14}	&	0.12	&	0.09	\\
-	&	(0.05)	&	(0.04)	&	(0.10)	&	(0.05)	&	(0.08)	&	(0.05)	\\ \midrule
+	&	\textbf{13.2\%}	&	\textbf{14.0\%}	&	\textbf{13.9\%}	&	\textbf{13.0\%}	&	9.6\%	&	\textbf{10.0\%}	\\
+	&	(2.9\%)	&	(3.1\%)	&	(3.7\%)	&	(4.3\%)	&	(6.0\%)	&	(4.9\%)	\\ \midrule
 Prediction	&	\textit{to Age 21}	&	\textit{to Age 30}	&	\textit{to Age 21}	&	\textit{to Age 30}	&	\textit{to Age 21}	&	\textit{to Age 30}	\\
-Span	&	\textbf{0.11}	&	\textbf{0.11}	&	\textbf{0.12}	&	\textbf{0.13}	&	\textbf{0.12}	&	\textbf{0.13}	\\
-	&	(0.05)	&	(0.04)	&	(0.05)	&	(0.05)	&	(0.08)	&	(0.07)	\\ \midrule
+Span	&	\textbf{8.8\%}	&	\textbf{12.0\%}	&	\textbf{11.8\%}	&	(12.8\%)	&	\textbf{10.7\%}	&	\textbf{11.7\%}	\\
+	&	(4.5\%)	&	(3.4\%)	&	(4.8\%)	&	4.7\%	&	(5.8\%)	&	(5.2\%)	\\ \midrule
 Counter-	&	\textit{vs. Stay at Home}	&	\textit{vs. Alt. Presch.}	&	\textit{vs. Stay at Home}	&	\textit{vs. Alt. Presch.}	&	\textit{vs. Stay at Home}	&	\textit{vs. Alt. Presch.}	\\
-factuals	&	\textbf{0.09}	&	\textbf{0.14}	&	\textbf{0.07}	&	\textbf{0.15}	&	\textbf{0.14}	&	0.10	\\
-	&	(0.04)	&	(0.04)	&	(0.04)	&	(0.06)	&	(0.07)	&	(0.08)	\\ \midrule
-Deadweight-	&	\textit{0\%}	&	\textit{100\%\textit}	&	\textit{0\%}	&	\textit{100\%\textit}	&	\textit{0\%}	&	\textit{100\%\textit}	\\
-loss	&	\textbf{0.20}	&	\textbf{0.11}	&	\textbf{0.18}	&	\textbf{0.11}	&	0.21	&	\textbf{0.09}	\\
-	&	(0.08)	&	(0.07)	&	(0.08)	&	(0.05)	&	(0.19)	&	(0.10)	\\ \midrule
+factuals	&	\textbf{9.4\%}	&	\textbf{15.6\%}	&	6.0\%	&	\textbf{15.8\%}	&	\textbf{13.4\%}	&	8.8\%	\\
+	&	(4.2\%)	&	(4.3\%)	&	(3.6\%)	&	(5.0\%)	&	(5.7\%)	&	(7.0\%)	\\ \midrule
+Deadweight-	&	\textit{0\%}	&	\textit{100\%\textit}	&	\textit{0\%}	&	\textit{100\%}	&	\textit{0\%}	&	\textit{100\%}	\\
+loss	&	\textbf{18.3\%}	&	\textbf{11.2\%}	&	\textbf{19.4\%}	&	\textbf{12.1\%}	&	\textbf{17.7\%}	&	7.1\%	\\
+	&	(4.7\%)	&	(3.1\%)	&	(6.2\%)	&	(3.9\%)	&	(12.4\%)	&	(4.2\%)	\\ \midrule
 Parental	&	\textit{Mincer Life-cycle}	&	\textit{Life-cycle Prediction}	&	\textit{Mincer Life-cycle}	&	\textit{Life-cycle Prediction}	&	\textit{Mincer Life-cycle}	&	\textit{Life-cycle Prediction}	\\
-Labor	&	\textbf{0.15}	&	\textbf{0.14}	&	\textbf{0.14}	&	\textbf{0.14}	&	0.14	&	\textbf{0.13}	\\
-Income	&	(0.06)	&	(0.06)	&	(0.07)	&	(0.06)	&	(0.12)	&	(0.11)	\\ \midrule
+Income	&	\textbf{15.2\%}	&	\textbf{14.5\%}	&	\textbf{16.0\%}	&	\textbf{14.5\%}	&	\textbf{13.3\%}	&	\textbf{12.3\%}	\\
+	&	(4.0\%)	&	(6.4\%)	&	(5.1\%)	&	(6.4\%)	&	(8.2\%)	&	(9.9\%)	\\ \midrule
 Labor	&	\textit{.5\% Annual Decay}	&	\textit{.5\% Annual Growth}	&	\textit{.5\% Annual Decay}	&	\textit{.5\% Annual Growth}	&	\textit{.5\% Annual Decay}	&	\textit{.5\% Annual Growth}	\\
-Income	&	\textbf{0.13}	&	\textbf{0.13}	&	\textbf{0.13}	&	\textbf{0.13}	&	0.10	&	0.10	\\
-	&	(0.05)	&	(0.04)	&	(0.06)	&	(0.06)	&	(0.08)	&	(0.08)	\\ \midrule
+Income	&	\textbf{13.5\%}	&	\textbf{13.8\%}	&	\textbf{14.5\%}	&	\textbf{14.8\%}	&	\textbf{9.9\%}	&	\textbf{10.3\%}	\\
+	&	(3.4\%)	&	(3.2\%)	&	(4.3\%)	&	(4.1\%)	&	(6.0\%)	&	(6.0\%)	\\ \midrule
 Crime	&	\textit{Drop Major Crimes}	&	\textit{Halve Costs}	&	\textit{Drop Major Crimes}	&	\textit{Halve Costs}	&	\textit{Drop Major Crimes}	&	\textit{Halve Costs}	\\
-	&	\textbf{0.13}	&	\textbf{0.11}	&	\textbf{0.14}	&	\textbf{0.11}	&	0.11	&	0.10	\\
-	&	(0.05)	&	(0.05)	&	(0.05)	&	(0.05)	&	(0.08)	&	(0.08)	\\ \midrule
+	&	\textbf{10.7\%}	&	\textbf{11.6\%}	&	\textbf{12.0\%}	&	\textbf{11.9\%}	&	\textbf{10.1\%}	&	\textbf{9.9\%}	\\
+	&	(4.4\%)	&	(3.8\%)	&	(5.3\%)	&	(4.9\%)	&	(6.0\%)	&	(6.0\%)	\\ \midrule
 Health	&	\textit{Drop All}	&	\textit{Double Value of Life}	&	\textit{Drop All}	&	\textit{Double Value of Life}	&	\textit{Drop All}	&	\textit{Double Value of Life}	\\
-(QALYs)	&	\textbf{0.12}	&	\textbf{0.13}	&	\textbf{0.12}	&	\textbf{0.13}	&	0.10	&	0.09	\\
-	&	(0.06)	&	(0.05)	&	(0.07)	&	(0.06)	&	(0.08)	&	(0.07)	\\ \bottomrule
+(QALYs)	&	\textbf{12.8\%}	&	\textbf{13.5\%}	&	\textbf{13.5\%}	&	\textbf{14.4\%}	&	8.8\%	&	9.3\%	\\
+	&	(4.6\%)	&	(3.6\%)	&	(5.6\%)	&	(4.6\%)	&	(6.4\%)	&	(6.1\%)	\\ \bottomrule
 \end{tabular} 
