--- a/output/sensitivity.tex
+++ b/output/sensitivity.tex
@@ -4,26 +4,26 @@
 \cmidrule(lr){2-4}      \cmidrule(lr){5-7}      \cmidrule(lr){8-10}																			
 Removed Component       &       NPV     &       IRR     &       B/C     &       NPV     &       IRR     &       B/C     &       NPV     &       IRR     &       B/C     \\																			
 \midrule																			
-None	&	161,759	&	\textbf{0.10}	&	\textbf{2.61}	&	919,049	&	\textbf{0.15}	&	\textbf{10.19}	&	636,674	&	\textbf{0.14}	&	\textbf{7.33}	\\
-	&		&	(0.06)	&	(0.73)	&		&	(0.04)	&	(2.93)	&		&	(0.03)	&	(1.84)	\\ \\
-Parental Income	&	148,854	&	0.04	&	1.12	&	107,907	&	\textbf{0.11}	&	\textbf{9.10}	&	116,953	&	\textbf{0.09}	&	\textbf{6.17}	\\
-	&		&	(0.02)	&	(0.65)	&		&	(0.03)	&	(2.92)	&		&	(0.03)	&	(1.87)	\\
-Subject Labor Income	&	41,908	&	0.09	&	\textbf{2.21}	&	238,105	&	\textbf{0.13}	&	\textbf{7.75}	&	133,032	&	\textbf{0.13}	&	\textbf{6.03}	\\
-	&		&	(0.06)	&	(0.66)	&		&	(0.05)	&	(2.23)	&		&	(0.04)	&	(1.77)	\\
-Subject Transfer Income	&	419	&	\textbf{0.10}	&	\textbf{2.61}	&	-7,265	&	\textbf{0.15}	&	\textbf{10.26}	&	-4,372	&	\textbf{0.14}	&	\textbf{7.38}	\\
-	&		&	(0.06)	&	(0.73)	&		&	(0.04)	&	(2.93)	&		&	(0.03)	&	(1.84)	\\
-Subject QALY	&	42,102	&	0.09	&	\textbf{2.20}	&	106,218	&	\textbf{0.14}	&	\textbf{9.14}	&	87,181	&	\textbf{0.13}	&	\textbf{6.48}	\\
-	&		&	(0.06)	&	(0.69)	&		&	(0.06)	&	(2.73)	&		&	(0.05)	&	(1.79)	\\
-Medical Expenditures	&	-16,037	&	0.09	&	\textbf{2.77}	&	-42,038	&	\textbf{0.15}	&	\textbf{10.61}	&	-31,221	&	\textbf{0.14}	&	\textbf{7.65}	\\
-	&		&	(0.06)	&	(0.76)	&		&	(0.03)	&	(2.89)	&		&	(0.03)	&	(1.85)	\\
-Control Substitution	&	16,691	&	0.08	&	\textbf{2.45}	&	13,434	&	\textbf{0.14}	&	\textbf{10.05}	&	14,659	&	\textbf{0.12}	&	\textbf{7.19}	\\
-	&		&	(0.05)	&	(0.73)	&		&	(0.04)	&	(2.92)	&		&	(0.03)	&	(1.84)	\\
-Education Costs	&	1,457	&	\textbf{0.10}	&	\textbf{2.59}	&	-7,852	&	\textbf{0.15}	&	\textbf{10.26}	&	-4,518	&	\textbf{0.14}	&	\textbf{7.37}	\\
-	&		&	(0.06)	&	(0.72)	&		&	(0.04)	&	(2.93)	&		&	(0.03)	&	(1.86)	\\
-Crime Costs	&	31,668	&	0.10	&	\textbf{2.34}	&	638,923	&	\textbf{0.09}	&	4.08	&	450,368	&	\textbf{0.08}	&	\textbf{3.06}	\\
-	&		&	(0.06)	&	(0.62)	&		&	(0.05)	&	(2.18)	&	&	(0.04)	&	(1.01)	\\ \\
-Deadweight Loss	&		&	\textbf{0.18}	&	\textbf{3.83}	&		&	\textbf{0.19}	&	\textbf{15.38}	&		&	\textbf{0.18}	&	\textbf{11.01}	\\
-	&		&	(0.12)	&	(1.04)	&		&	(0.06)	&	(4.35)	&		&	(0.05)	&	(2.79)	\\
+None	&	161,759	&	\textbf{10.1\%}	&	\textbf{2.61}	&	919,049	&	\textbf{14.7\%}	&	\textbf{10.19}	&	636,674	&	\textbf{13.7\%}	&	\textbf{7.33}	\\
+	&		&	(6\%)	&	(0.73)	&		&	(4\%)	&	(2.93)	&		&	(3\%)	&	(1.84)	\\ \\
+Parental Income	&	148,854	&	4\%	&	1.12	&	107,907	&	\textbf{11\%}	&	\textbf{9.10}	&	116,953	&	\textbf{9\%}	&	\textbf{6.17}	\\
+	&		&	(2\%)	&	(0.65)	&		&	(3\%)	&	(2.92)	&		&	(3\%)	&	(1.87)	\\
+Subject Labor Income	&	41,908	&	9\%	&	\textbf{2.21}	&	238,105	&	\textbf{13\%}	&	\textbf{7.75}	&	133,032	&	\textbf{13\%}	&	\textbf{6.03}	\\
+	&		&	(6\%)	&	(0.66)	&		&	(5\%)	&	(2.23)	&		&	(4\%)	&	(1.77)	\\
+Subject Transfer Income	&	419	&	\textbf{10\%}	&	\textbf{2.61}	&	-7,265	&	\textbf{15\%}	&	\textbf{10.26}	&	-4,372	&	\textbf{14\%}	&	\textbf{7.38}	\\
+	&		&	(6\%)	&	(0.73)	&		&	(4\%)	&	(2.93)	&		&	(3\%)	&	(1.84)	\\
+Subject QALY	&	42,102	&	9\%	&	\textbf{2.20}	&	106,218	&	\textbf{14\%}	&	\textbf{9.14}	&	87,181	&	\textbf{13\%}	&	\textbf{6.48}	\\
+	&		&	(6\%)	&	(0.69)	&		&	(6\%)	&	(2.73)	&		&	(5\%)	&	(1.79)	\\
+Medical Expenditures	&	-16,037	&	9\%	&	\textbf{2.77}	&	-42,038	&	\textbf{15\%}	&	\textbf{10.61}	&	-31,221	&	\textbf{14\%}	&	\textbf{7.65}	\\
+	&		&	(6\%)	&	(0.76)	&		&	(3\%)	&	(2.89)	&		&	(3\%)	&	(1.85)	\\
+Alternative Preschools	&	16,691	&	8\%	&	\textbf{2.45}	&	13,434	&	\textbf{14\%}	&	\textbf{10.05}	&	14,659	&	\textbf{12\%}	&	\textbf{7.19}	\\
+	&		&	(5\%)	&	(0.73)	&		&	(4\%)	&	(2.92)	&		&	(3\%)	&	(1.84)	\\
+Education Costs	&	1,457	&	\textbf{10\%}	&	\textbf{2.59}	&	-7,852	&	\textbf{15\%}	&	\textbf{10.26}	&	-4,518	&	\textbf{14\%}	&	\textbf{7.37}	\\
+	&		&	(6\%)	&	(0.72)	&		&	(4\%)	&	(2.93)	&		&	(3\%)	&	(1.86)	\\
+Crime Costs	&	31,668	&	10\%	&	\textbf{2.34}	&	638,923	&	\textbf{9\%}	&	4.08	&	450,368	&	\textbf{8\%}	&	\textbf{3.06}	\\
+	&		&	(6\%)	&	(0.62)	&		&	(5\%)	&	(2.18)	&	&	(4\%)	&	(1.01)	\\ \\
+Deadweight Loss	&		&	\textbf{18\%}	&	\textbf{3.83}	&		&	\textbf{19\%}	&	\textbf{15.38}	&		&	\textbf{18\%}	&	\textbf{11.01}	\\
+	&		&	(12\%)	&	(1.04)	&		&	(6\%)	&	(4.35)	&		&	(5\%)	&	(2.79)	\\
 0\% Discount Rate	&		&		&	\textbf{5.06}	&		&		&	\textbf{25.45}	&		&		&	\textbf{17.40}	\\
 	&		&		&	(2.82)	&		&		&	(10.42)	&		&		&	(5.90)	\\
 7\% Discount Rate	&		&		&	\textbf{1.49}	&		&		&	\textbf{3.78}	&		&		&	\textbf{2.91}	\\
