--- a/Appendices/VSensitivity.tex
+++ b/Appendices/VSensitivity.tex
@@ -2,7 +2,7 @@
 
 \subsection{Alternative Definitions of Control Substitution}
 
-\noindent In the main paper, we let $V$ be a dummy variable indicating whether or not the child attended alternative childcare arrangements. As we discuss in Section~\ref{section:background}, this dummy variable is a summary of a more complex reality in which children attend alternatives different months between ages 0 to 5. In this appendix, we explore three different alternative definitions of $V$: we let $V$ indicate if children attend alternatives (i) $2/5$ of the time between ages 0 to 5; (ii) $3/5$ of the time between ages 0 to 5; and (iii) $4/5$ of the time between ages 0 to 5. For each of these cases, we present a summary table of treatment effects analogous to Table~\ref{table:tescombined} in the main paper.\\
+\noindent In the main paper, we let $V$ be a dummy variable indicating whether or not the child attended alternative childcare arrangements. As we discuss in Section~\ref{section:background}, this dummy variable is a summary of a more complex reality in which children attend alternatives different months between ages 0 to 5. In this appendix, we explore three different alternative definitions of $V$: we let $V$ indicate if children attend alternatives (i) $2/5$ of the time between ages 0 to 5; (ii) $3/5$ of the time between ages 0 to 5; and (iii) $4/5$ of the time between ages 0 to 5. For each of these cases, we present a summary table of treatment effects analogous to Tables~\ref{table:tescombinedmales} and \ref{table:tescombinedfemales} in the main paper.\\
 
 \noindent The results are robust to different choices for modeling $V$. What matters is the extensive margin decision to enroll children into alternative childcare arrangements, and not the intensive margin decision of the number of months they attend between ages 0 to 5.
 
@@ -52,7 +52,7 @@ Note: This table shows the treatment effects for categories outcomes that are im
 
 \subsection{Two-Sided Statistical Tests}
 
-\noindent In the main paper, we classify the outcomes of interest as ``beneficial'' (see Appendix~\ref{appendix:results} our classification) and perform one-sided tests. The next table presents two-sided inferences for the main table of treatment-effect estimates in the main paper, Table~\ref{table:tescombined}. The main treatment effects survive two-sided testing. A full replication of the results throughout the main text using two-sided statistical tests is available under request. As is evident from the standard errors, our combining functions and cost-benefit analysis results generally survive two-sided testing.
+\noindent In the main paper, we classify the outcomes of interest as ``beneficial'' (see Appendix~\ref{appendix:results} our classification) and perform one-sided tests. The next table presents two-sided inferences for the main table of treatment-effect estimates in the main paper, Tables~\ref{table:tescombinedmales} and \ref{table:tescombinedfemales}. The main treatment effects survive two-sided testing. A full replication of the results throughout the main text using two-sided statistical tests is available under request. As is evident from the standard errors, our combining functions and cost-benefit analysis results generally survive two-sided testing.
 
 \newgeometry{top=.6in, bottom=.8in, left=.8in, right=.8in}
 \begin{table}[!htbp]
