--- a/output/alternative_specifications.tex
+++ b/output/alternative_specifications.tex
@@ -11,12 +11,12 @@
 & NPV & IRR & B/C & & NPV & IRR & B/C & & NPV & IRR & B/C & & NPV & IRR & B/C & & NPV & IRR & B/C\\
 
 \hline \\
-Pooled & 71,345 & 0.13 & 6.29 & & 154,547 & 0.26 & 12.39 & & 268,179 & 0.49 & 23.64 & & 46,953 & 0.09 & 4.14 && 62,080 & 0.10 & 4.98\\
-& (86,343) & (.05) & (2.11) & & (187,036) & (0.11) & (5.16) && (211,089) & (0.12) & (5.16) & & (25,323) & (0.01) & (0.62) & & (75,030) & (0.03) & (2.07)\\ \\
+Pooled & 133,032 & 0.13 & 6.29 &  & 154,547 & 0.15 & 7.31 &  & 268,179 & 0.26 & 12.68 &  & 46,953 & 0.05 & 2.22 &  & 132,924 & 0.13 & 6.28 \\
+ & (76,634) & (0.05) & (2.11) &  & (187,036) & (0.12) & (5.15) &  & (211,089) & (0.14) & (5.81) &  & (25,323) & (0.02) & (0.7) &  & (11,253) & (0.01) & (0.31) \\ \\
 
-Males & 300,896 & 0.13 & 11.1 & & 200,509 & 0.09 & 7.62 &&456,078 & 0.2 & 16.82 & & 74,775 & 0.03 & 2.76 && 289,471 & 0.13 & 11.01 \\ 
-& (241,588) & (0.06) & (6.35) & & (160,988) & (0.04) & (3.73)&& (358,534) & (0.09) & (9.42) & & (54,752) & (0.01) & (1.44) & & (232,471) & (0.06) & (5.39)\\ \\ 
+Males & 238,105 & 0.13 & 11.1 &  & 200,509 & 0.11 & 9.35 &  & 456,078 & 0.25 & 21.26 &  & 74,775 & 0.04 & 3.49 &  & 196,530 & 0.11 & 9.16 \\
+ & (185,375) & (0.06) & (6.35) &  & (160,988) & (0.05) & (5.51) &  & (358,534) & (0.12) & (12.28) &  & (54,752) & (0.02) & (1.88) &  & (20,210) & (0.01) & (0.69) \\ \\
 
-Females & 59,390 & 0.10 & 2.45 & & 79,441 & 0.15 & 3.61 & & 31,303 & 0.05 & 1.29 & & 19,959 & 0.03 & 0.82 & & 59,163 & 0.11 & 2.69  \\ 
-& (63,060) & (0.07) & (0.79) & & (99,416) & (0.11) & (1.56) && (168,160) & (0.19) & (2.11) & & (34,142) & (0.04) & (0.43)  & &  (74,039) & (0.08) & (1.16) \\ \\ \\ \bottomrule
+Females & 41,908 & 0.1 & 2.45 &  & 79,441 & 0.19 & 4.64 &  & 31,303 & 0.07 & 1.83 &  & 19,959 & 0.05 & 1.17 &  & 69,317 & 0.17 & 4.05 \\ 
+ & (24,606) & (0.07) & (0.79) &  & (99,416) & (0.28) & (3.19) &  & (168,160) & (0.48) & (5.4) &  & (34,142) & (0.1) & (1.1) &  & (4,350) & (0.0	1) & (0.14) \\ \\ \\ \bottomrule
 \end{tabular}
